# Punto-Flotante

./: CMakeLists.txt  LICENSE  Makefile  README.md  doubleToBinary.cpp  doubleToBinary.h  floatToBinary.cpp  floatToBinary.h  floatToDouble.cpp  floatToDouble.h  main.cpp  tools.cpp  tools.h
